--- a/src/location.css
+++ b/src/location.css
@@ -1,9 +1,9 @@
-.locate {
+/*.locate {
   display: grid;
   background-color: black;
   height: 100vh;
   place-items: center;
-}
+}*/
 /*
 .locate > button {
   height: 200px;
